objects/sked_Google_Api_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Max_Elements_per_second__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Max. Elements per second</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Origins_Destinations__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Max. Origins/Destinations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_Key__c</fullName>
        <label>Server Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Skedulo Google Api Settings</label>
</CustomObject>